// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`When not authenticated Login Form renders a snapshot properly 1`] = `
<div
  className="container is-fluid"
>
  <div
    className="box is-half"
  >
    <h3
      className="title is-3 has-text-centered"
    >
      Log In
    </h3>
    <div>
      <ul
        className="validation-list"
      >
        <li
          className="error"
        >
          Email is required.
        </li>
        <li
          className="error"
        >
          Password is required.
        </li>
      </ul>
      <br />
    </div>
    <div
      className="column is-one-quarter"
    />
    <div
      className="column"
    >
      <form
        onSubmit={[Function]}
      >
        <div
          className="field"
        >
          <label
            className="label is-md"
          >
            Email:
          </label>
          <div
            className="control has-icons-left"
          >
            <input
              className="input is-medium"
              name="email"
              onChange={[Function]}
              placeholder="e.g. johndoe@email.com"
              required={true}
              type="email"
              value=""
            />
            <span
              className="icon is-left"
            >
              <i
                className="fas fa-envelope"
              />
            </span>
            <span
              className="icon is-right"
            />
          </div>
        </div>
        <div
          className="field"
        >
          <label
            className="label is-md"
          >
            Password:
          </label>
          <div
            className="control has-icons-left"
          >
            <input
              className="input is-medium"
              name="password"
              onChange={[Function]}
              placeholder="Password"
              required={true}
              type="password"
              value=""
            />
            <span
              className="icon is-medium is-left"
            >
              <i
                className="fas fa-lock"
              />
            </span>
            <span
              className="icon is-medium is-right"
            />
          </div>
        </div>
        <input
          className="button is-primary is-medium is-fullwidth"
          disabled={true}
          type="submit"
          value="Submit"
        />
      </form>
      <div
        className="column is-one-quarter"
      />
    </div>
  </div>
</div>
`;

exports[`When not authenticated Register Form renders a snapshot properly 1`] = `
<div
  className="container is-fluid"
>
  <div
    className="box is-half"
  >
    <h3
      className="title is-3 has-text-centered"
    >
      Register
    </h3>
    <div>
      <ul
        className="validation-list"
      >
        <li
          className="error"
        >
          Username must be greater than 5 characters.
        </li>
        <li
          className="error"
        >
          Email must be greater than 5 characters.
        </li>
        <li
          className="error"
        >
          Email must be a valid email address.
        </li>
        <li
          className="error"
        >
          Password must be greater than 10 characters.
        </li>
      </ul>
      <br />
    </div>
    <div
      className="column is-one-quarter"
    />
    <div
      className="column"
    >
      <form
        onSubmit={[Function]}
      >
        <div
          className="field"
        >
          <label
            className="label is-md"
          >
            Username:
          </label>
          <div
            className="control has-icons-left"
          >
            <input
              className="input is-medium"
              name="username"
              onChange={[Function]}
              placeholder="e.g. johndoe123"
              required={true}
              type="text"
              value=""
            />
            <span
              className="icon is-medium is-left"
            >
              <i
                className="fas fa-user"
              />
            </span>
            <span
              className="icon is-md is-right"
            />
          </div>
        </div>
        <div
          className="field"
        >
          <label
            className="label is-md"
          >
            Email:
          </label>
          <div
            className="control has-icons-left"
          >
            <input
              className="input is-medium"
              name="email"
              onChange={[Function]}
              placeholder="e.g. johndoe@email.com"
              required={true}
              type="email"
              value=""
            />
            <span
              className="icon is-left"
            >
              <i
                className="fas fa-envelope"
              />
            </span>
            <span
              className="icon is-right"
            />
          </div>
        </div>
        <div
          className="field"
        >
          <label
            className="label is-md"
          >
            Password:
          </label>
          <div
            className="control has-icons-left"
          >
            <input
              className="input is-medium"
              name="password"
              onChange={[Function]}
              placeholder="Password"
              required={true}
              type="password"
              value=""
            />
            <span
              className="icon is-medium is-left"
            >
              <i
                className="fas fa-lock"
              />
            </span>
            <span
              className="icon is-medium is-right"
            />
          </div>
        </div>
        <input
          className="button is-primary is-medium is-fullwidth"
          disabled={true}
          type="submit"
          value="Submit"
        />
      </form>
      <div
        className="column is-one-quarter"
      />
    </div>
  </div>
</div>
`;
